@@ -1,6 +1,8 @@
 2006-06-02  Richard Dale  <rdale@foton.es>
 
 	* Fixed bug when emitting signals for pointer arg types
+	* setMocType() now works with reference types when there
+	  in no corresponding value type in the Smoke lib.
 
 2006-05-31  Paolo Capriotti  <paolo.capriotti@gmail.com>
 
